<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NDEF Tools for Android</string>
    <string name="app_name_description">NDEF Tools for Android boilerplate</string>
    
    <string name="androidApplication">Android Application</string>
    <string name="androidApplicationPackageName">Package name</string>

    <string name="absoluteURI">Absolute URI</string>
    
    <string name="action">Action</string>
    <string name="actionAction">Action</string>
    
    <string name="alternativeCarrier">Alternative Carrier</string>
    <string name="alternativeCarrierCarrierPowerState">Carrier power state</string>
    <string name="alternativeCarrierCarrierDataReference">Carrier data reference</string>
    <string name="alternativeCarrierAuxiliaryDataReferences">Auxiliary data references</string>
    
    <string name="empty">Empty</string>
    <string name="reserved">Reserved</string>
    <string name="unchanged">Unchanged</string>

    <string name="external">External</string>
    <string name="domain">Domain</string>
    <string name="type">Type</string>
    <string name="data">Data</string>
    <string name="dataSize">%d bytes</string>
    
    <string name="genericControl">Generic Control</string>
    <string name="genericControlConfigurationByte">Configuration byte</string>
    <string name="genericControlTarget">Target</string>
    <string name="genericControlAction">Action</string>
    <string name="genericControlData">Data</string>
    <string name="genericControlDataRecords">%d data records</string>
    
    <string name="handoverCarrier">Handover Carrier</string>
    <string name="handoverCarrierCarrierTypeFormat">Carrier type format</string>
    <string name="handoverCarrierCarrierType">Carrier type</string>
    <string name="handoverCarrierCarrierData">Carrier data</string>
    <string name="handoverCarrierCarrierDataValue">%d bytes</string>
    
    <string name="handoverRequest">Handover Request</string>
    <string name="handoverRequestMajorVersion">Major version</string>
    <string name="handoverRequestMinorVersion">Minor version</string>
    <string name="handoverRequestCollisionResolution">Collision resolution</string>
    <string name="handoverRequestAlternativeCarriers">Alternative carriers</string>
    
    <string name="handoverSelect">Handover Select</string>
    <string name="handoverSelectMajorVersion">Major version</string>
    <string name="handoverSelectMinorVersion">Minor version</string>
    <string name="handoverSelectAlternativeCarriers">Alternative carriers</string>
    <string name="handoverSelectError">Error</string>

    <string name="mimemedia">Mimemedia</string>
    <string name="mimemediaMimetype">Mimetype</string>
    <string name="mimemediaSize">Payload size</string>
    
    <string name="smartPoster">Smart Poster</string>
    <string name="smartPosterTitle">Title</string>
    <string name="smartPosterAction">Action</string>
    <string name="smartPosterURI">URI</string>
    
    <string name="text">Text</string>
    <string name="textMessage">Message</string>
    <string name="textEncoding">Encoding</string>
    <string name="textLocale">Locale</string>
    
    <string name="unknown">Unknown</string>
    <string name="uri">URI</string>
    
    <string name="wellknownURI">Well-known URI</string>
    
    
    <string name="nfcAvailableEnabled">NFC available and enabled.</string>
    <string name="nfcAvailableDisabled">NFC available but disabled.</string>
    <string name="nfcBeamAvailableEnabled">Beam enabled.</string>
    <string name="nfcBeamAvailableDisabled">Beam disabled.</string>
    <string name="nfcBeamed">Message beamed.</string>
    <string name="noNfcMessage">NFC is not available.</string>
    <string name="tagNotWritable">Tag is not writable.</string>

    <string name="ndefWriteFailed">Write tag failed: %s</string>
    <string name="ndefWriteSuccess">Write tag successful.</string>

    <string name="nfcSettingEnabled">NFC enabled in settings.</string>
    <string name="nfcSettingDisabled">NFC disabled in settings.</string>
    
    <string name="ndefUnformattedWriteFailed">Write unformatted tag failed.</string>
    <string name="ndefFormattedWriteFailed">Write formatted failed.</string>
    <string name="readEmptyMessage">Read empty message.</string>
    <string name="readNonNDEFMessage">Read non-NDEF message.</string>
    <string name="readUnparsableNDEFMessage">Read NDEF message but was unable to parse.</string>
    <string name="readSingleRecordNDEFMessage">Read single-record NDEF message.</string>
    <string name="readMultipleRecordNDEFMessage">Read multi-record NDEF message.</string>

    <string name="wroteUnformattedTag">Wrote unfromatted tag.</string>
    <string name="wroteFormattedTag">Wrote formatted tag.</string>
    <string name="cannotWriteTechMessage">Cannot write tech or unformatted tag.</string>
    <string name="tagTooSmallMessage">Message size %1$d bytes exceeds tag capacity of %2$d bytes.</string>

    <string name="introductionTitle">NDEF Tools for Android boilerplate demo</string>
    <string name="introductionDescription">A working NFC-capable app built using data-binding and abstract activities from the NDEF Tools for Android project.</string>
    
    <string name="writer">NFC tag writer</string>
    <string name="writerTitle">NFC tag writer demo</string>
    <string name="writerDescription">This activity writes a simple NDEF message containing an Android Application Record and a Text Record from the below text input to tags. </string>
    <string name="writerHint">Your Text Record-text here</string>
    <string name="writerScanHint">(Scan tag to write at any time.)</string>
    
    <string name="reader">NFC tag and Beam (push) reader</string>
    <string name="readerTitle">NFC tag and Beam (push) reader demo</string>
    <string name="readerDescription">This activity reads and displays the contents of any incoming NFC message in the NDEF format.</string>
    
    <string name="beamer">NFC Beam (push) writer</string>
    <string name="beamerTitle">NFC Beam (push) writer demo</string>
    <string name="beamerDescription">This activity beams (pushes) an Android Application Record to any other device, as well as detecting incoming messages in the NDEF format.\n\nNote that most phones require that the sender manually taps on the screen to do the actual payload data transmit part of the beam (push) messaging.</string>

    <string name="tagLost">Tag lost</string>
    
    
</resources>