<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<Button
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/reader" 
	    android:onClick="reader"
	    />

	<Button
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/writer"
	    android:onClick="writer"
	     />
	
	<Button
	    android:id="@+id/beamer"
	    android:visibility="gone"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/beamer"
	    android:onClick="beamer"
	     />
	
    
</LinearLayout>