<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:textColor="#FFFFFF"
     >

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smartPoster"
        android:padding="3dip"
        android:textColor="#FFFFFF"
		android:textStyle="bold"
         />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/smartPosterTitle"
				android:textColor="#FFFFFF"
				android:id="@+id/smartPosterTitleDescriptor"
                />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/smartPosterTitleValue"
				android:textColor="#FFFFFF"
            />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/smartPosterURI"
				android:textColor="#FFFFFF"
                 />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/smartPosterURIValue"
				android:textColor="#FFFFFF"
                 />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/smartPosterAction"
				android:textColor="#FFFFFF"
                 />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/smartPosterActionValue"
				android:textColor="#FFFFFF"
                 />
        </TableRow>
    </TableLayout>

</LinearLayout>