<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
     >

    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/alternativeCarrier"
		android:padding="3dip"
        android:textColor="#FFFFFF"
		android:textStyle="bold"
	/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/alternativeCarrierCarrierPowerState"
				android:textColor="#FFFFFF"
                />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/alternativeCarrierCarrierPowerStateValue"
				android:textColor="#FFFFFF"
            />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/alternativeCarrierCarrierDataReference"
				android:textColor="#FFFFFF"
                 />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/alternativeCarrierCarrierDataReferenceValue"
				android:textColor="#FFFFFF"
                 />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/alternativeCarrierAuxiliaryDataReferences"
				android:textColor="#FFFFFF"
                 />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/alternativeCarrierAuxiliaryDataReferencesValue"
				android:textColor="#FFFFFF"
                 />
        </TableRow>
    </TableLayout>
    
    
</LinearLayout>
